738-fix: Logo shrinking on small screens (#757)
* fix: 738 - logo shrinking and menu breakpoints

* fix: 738 - delete a redundant media query in burder menu

--- a/src/core/base-layout/components/header/burger/burger.module.scss
+++ b/src/core/base-layout/components/header/burger/burger.module.scss
@@ -54,10 +54,6 @@
     .bottom {
       transform: rotate(45deg) translate(-5px, -6px);
     }
-
-    @include media-tablet {
-      display: block;
-    }
   }
 
   @include media-hover {
@@ -70,7 +66,7 @@
     }
   }
 
-  @include media-tablet {
+  @include media-tablet-large {
     z-index: 10;
     display: block;
   }
